# dxeeworld

./: .env.example  CLAUDE.md  LONG-TODO.md  README.md  SETUP.md  TESTING_TRANSLATION_SERVICE.md  activate_server.sh  alibaba_deployment.md  cookies.txt  csv_import.py  pyproject.toml  pyvenv.cfg  requirements.txt  run_server.py  run_with_uv.sh  test_csv_import.py
.claude/: settings.local.json
.github/workflows/: claude.yml
.kiro/steering/: product.md  structure.md  tech.md
docs/: API_DOCUMENTATION.md  ENVIRONMENT_SETUP.md  MIGRATION_GUIDE.md  MIGRATION_MULTILINGUAL.md  MONGODB_STRUCTURE.md  PAGE_DESIGN.md  REVIEW_INDEXES.md
scripts/: create_review_indexes.py
specs/startup-platform/: design.md  spec.json  tasks.md
src/: __init__.py  app.py  config.py  database.py  handlers.py
src/handlers/: __init__.py  auth_handler.py  base_handler.py  category_review_list_handler.py  company_handler.py  email_auth_handler.py  facebook_oauth_handler.py  google_oauth_handler.py  health_handler.py  home_handler.py  review_detail_handler.py  review_handler.py  simple_auth_handler.py  unified_auth_handler.py  user_info_handler.py
src/middleware/: access_control_middleware.py  auth_middleware.py
src/models/: company.py  job.py  review.py  review_history.py  user.py
src/services/: auth_error_handler.py  company_calculation_service.py  company_search_service.py  company_service.py  csv_import_service.py  email_auth_service.py  email_encryption_service.py  email_service.py  i18n_form_service.py  i18n_service.py  identity_database_service.py  identity_service.py  job_service.py  locale_detection_service.py  oauth2_service.py  oauth_config_service.py  oauth_session_service.py  review_aggregation_service.py  review_anonymization_service.py  review_calculation_service.py  review_submission_service.py  search_result_service.py  session_service.py  translation_service.py  ui_auth_service.py  url_language_service.py  user_service.py
src/tools/: __init__.py  create_review_detail_indexes.py  create_review_indexes.py  csv_import_tool.py  import_companies_simple.py  migrate_initial_aggregation.py  migrate_multilingual.py  show_mongodb_structure.py
src/utils/: email_validator.py  result.py
static/css/: login-panel.css  main.css
static/geo/: README.md
static/i18n/: en.json  ja.json  zh.json
static/js/: login-panel.js  main.js  reviewForm.js
steering/: product.md  tech.md
templates/: base.html  category_review_list.html  home.html  review_detail.html
tests/: test_access_control_middleware.py  test_access_control_review_list.py  test_access_control_rules_config.py  test_auth_error_handler.py  test_base_handler_locale.py  test_basic_review_functionality.py  test_category_review_list_handler.py  test_category_review_list_template.py  test_company_calculation_service.py  test_company_database.py  test_company_detail_responsive.py  test_company_list_handler_fix.py  test_company_model_review_extension.py  test_company_review_indexes.py  test_company_search_filter.py  test_company_search_pagination.py  test_company_search_service.py  test_company_search_sort.py  test_company_search_validation.py  test_company_service.py  test_csv_import_service.py  test_csv_import_tool.py  test_database_service.py  test_e2e_form_language_switching.py  test_e2e_review_detail_flows.py  test_e2e_review_submission_journey.py  test_email_auth_handler.py  test_email_auth_service.py  test_email_code_resend_handler.py  test_email_code_verification_handler.py  test_email_encryption_service.py  test_email_login_handler.py  test_email_registration_form.py  test_email_service.py  test_email_verification_handler.py  test_employment_period_validation.py  test_facebook_oauth_handler.py  test_google_oauth_handler.py  test_i18n_form_service.py  test_i18n_service.py  (+73 more)
(+56 files in other folders)
