[project]
name = "dxeeworld"
version = "0.1.0"
description = "Kaggle-like startup ecosystem platform"
requires-python = ">=3.9"
dependencies = [
    "tornado==6.5.2",
    "motor>=3.6.0",
    "bcrypt==4.1.2",
    "jinja2==3.1.3",
    "python-dotenv==1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.4",
    "pytest-asyncio==0.21.1",
    "pytest-tornado==0.8.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = ["-v", "--tb=short"]
